--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "node": ">= 6"
   },
   "dependencies": {
-    "coffeescript": "helixbass/copheescript#prettier",
-    "prettier": "helixbass/prettier#visible-group"
+    "coffeescript": "github:helixbass/copheescript#prettier",
+    "prettier": "github:helixbass/prettier#visible-group"
   },
   "devDependencies": {
     "eslint": "^4.14.0",
