--- a/.prettierrc
+++ b/.prettierrc
@@ -2,4 +2,6 @@ semi: false
 singleQuote: true
 trailingComma: 'es5'
 bracketSpacing: false
-# indentChain: true
+indentChain: false
+# comma: 'nonTrailing'
+# respectBreak: ['control']
