--- a/.prettierrc
+++ b/.prettierrc
@@ -5,3 +5,4 @@ bracketSpacing: false
 indentChain: false
 # comma: 'nonTrailing'
 # respectBreak: ['object']
+# noImplicit: ['objectBraces', 'callParens']
