try to fix ci failure

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,6 @@ before_install:
 - nvm alias default v10.10.0
 - nvm use v10.10.0
 install:
-- rm yarn.lock && yarn install
+- yarn install
 script:
 - yarn test
